@@ -5,8 +5,9 @@ confirm
     :summary: Adds confirmation dialogs for destructive actions.
     :tags: fort interface
 
-Now you can get the chance to avoid accidentally disbanding a squad or deleting a
-hauling route in case you hit the key accidentally.
+In the base game, it is frightenly easy to destroy hours of work with a single
+misclick. Now you can avoid the consequences of accidentally disbanding a squad
+(for example), or deleting a hauling route.
 
 Usage
 -----
